--- a/lams_build/common.properties
+++ b/lams_build/common.properties
@@ -66,14 +66,15 @@ db.username=lams
 db.password=lamsdemo
 
 db.scripts=${basedir}/db/sql
-
+# you can set own timezone, for example "Europe/Warsaw"
+db.timezone=UTC
 
 # Basedir of embedded MySQL server. This is also the place where data is stored.
 # Set it if you use MXJ for running and/or building LAMS.
 db.location=C:/lams/database
 
 # To build LAMS using standalone MySQL server, use properties below
-db.url.build=jdbc:mysql://${db.host}:${db.port}/${db.name}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useUnicode=true&useSSL=false
+db.url.build=jdbc:mysql://${db.host}:${db.port}/${db.name}?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&autoReconnect=true&useUnicode=true&useSSL=false=&useLegacyDatetimeCode=false&serverTimezone=${db.timezone}
 db.url.init.build=${db.url.build}
 
 # To build LAMS using embedded MySQL server, use properties below
