--- a/lams_tool_deploy/src/java/org/lamsfoundation/lams/tool/deploy/templateDeploy.properties
+++ b/lams_tool_deploy/src/java/org/lamsfoundation/lams/tool/deploy/templateDeploy.properties
@@ -11,7 +11,7 @@ dbUsername=
 dbDriverUrl=jdbc:mysql://localhost:3306/scratch
 
 #Classname of JDBC driver
-dbDriverClass=com.mysql.jdbc.Driver
+dbDriverClass=com.mysql.cj.jdbc.Driver
 
 #List of files to move to the deploy directory
 deployFiles=
