--- a/lams_tool_deploy/.classpath
+++ b/lams_tool_deploy/.classpath
@@ -11,6 +11,6 @@
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-lang-2.0.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-logging.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/xstream-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/mysql-connector-java-5.1.46-bin.jar" sourcepath="/3rdParty_sources/mysql-connector"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/mysql-connector-java-8.0.11.jar" sourcepath="/3rdParty_sources/mysql-connector"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
