--- a/lams_tool_task/web/WEB-INF/web.xml
+++ b/lams_tool_task/web/WEB-INF/web.xml
@@ -72,27 +72,12 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-
 	<servlet>
-		<servlet-name>action</servlet-name>
-		<servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
-		<init-param>
-			<param-name>config</param-name>
-			<param-value>/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>debug</param-name>
-			<param-value>999</param-value>
-		</init-param>
-		<init-param>
-			<param-name>detail</param-name>
-			<param-value>1</param-value>
-		</init-param>
-		<init-param>
-			<param-name>validate</param-name>
-			<param-value>true</param-value>
-		</init-param>
-		<load-on-startup>2</load-on-startup>
+		<servlet-name>spring</servlet-name>
+		<servlet-class>
+			org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet>
@@ -123,7 +108,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>action</servlet-name>
+		<servlet-name>spring</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 
@@ -139,7 +124,7 @@
 
 
 	<jsp-config>
-		<!-- ======================================================== -->
+				<!-- ======================================================== -->
 		<!-- Struts Tag Library Descriptors -->
 		<!-- ======================================================== -->
 		<taglib>
@@ -175,6 +160,7 @@
 			<taglib-uri>tags-tiles-el</taglib-uri>
 			<taglib-location>/WEB-INF/tlds/struts/struts-tiles-el.tld</taglib-location>
 		</taglib>
+	
 		<!-- ======================================================== -->
 		<!-- JSTL 1.2 Tag Library -->
 		<!-- ======================================================== -->
@@ -194,6 +180,20 @@
 			<taglib-uri>tags-xml</taglib-uri>
 			<taglib-location>/WEB-INF/tlds/jstl/x.tld</taglib-location>
 		</taglib>
+		
+		<!-- ======================================================== -->
+		<!-- JSTL 1.2 Tag Library: Apache implementation of TLV -->
+		<!-- ======================================================== -->
+		<taglib>
+			<taglib-uri>tags-permittedTaglibs</taglib-uri>
+			<taglib-location>/WEB-INF/tlds/jstl/permittedTaglibs.tld</taglib-location>
+		</taglib>
+
+		<taglib>
+			<taglib-uri>tags-scriptfree</taglib-uri>
+			<taglib-location>/WEB-INF/tlds/jstl/scriptfree.tld</taglib-location>
+		</taglib>
+		
 		<!-- ======================================================== -->
 		<!-- Customized Tag Library -->
 		<!-- ======================================================== -->
