--- a/lams_tool_leader/web/WEB-INF/web.xml
+++ b/lams_tool_leader/web/WEB-INF/web.xml
@@ -66,7 +66,7 @@
 
 	<servlet>
 		<servlet-name>spring</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlett</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
