LDEV-4440 Add allowPublicKeyRetrieval param required by MySQL 8

--- a/lams_build/common.properties
+++ b/lams_build/common.properties
@@ -74,7 +74,7 @@ db.timezone=UTC
 db.location=C:/lams/database
 
 # To build LAMS using standalone MySQL server, use properties below
-db.url.build=jdbc:mysql://${db.host}:${db.port}/${db.name}?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&autoReconnect=true&useUnicode=true&useSSL=false=&useLegacyDatetimeCode=false&serverTimezone=${db.timezone}
+db.url.build=jdbc:mysql://${db.host}:${db.port}/${db.name}?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&autoReconnect=true&useUnicode=true&useSSL=false=&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=${db.timezone}
 db.url.init.build=${db.url.build}
 
 # To build LAMS using embedded MySQL server, use properties below
