--- a/lams_central/web/WEB-INF/web.xml
+++ b/lams_central/web/WEB-INF/web.xml
@@ -217,6 +217,12 @@
 	</servlet>
 
 	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>org.lamsfoundation.lams.web.LoginServlet
+		</servlet-class>
+	</servlet>
+
+	<servlet>
 		<servlet-name>jlatexmath</servlet-name>
 		<servlet-class>org.lamsfoundation.lams.web.JlatexmathServlet
 		</servlet-class>
@@ -431,6 +437,11 @@
 	<servlet-mapping>
 		<servlet-name>LearningDesignSVG</servlet-name>
 		<url-pattern>/services/LearningDesignSVG/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 
 	<servlet-mapping>
@@ -741,8 +752,8 @@
 		<auth-method>FORM</auth-method>
 		<realm-name>LAMS</realm-name>
 		<form-login-config>
-			<form-login-page>/login.jsp</form-login-page>
-			<form-error-page>/login.jsp?failed=y</form-error-page>
+			<form-login-page>/login</form-login-page>
+			<form-error-page>/login?failed=y</form-error-page>
 		</form-login-config>
 	</login-config>
 
