--- a/lams_central/.classpath
+++ b/lams_central/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="javadoc_location" value="http://tomcat.apache.org/tomcat-8.0-doc/servletapi/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/javax/servlet/jsp/api/main/jboss-jsp-api_2.3_spec-1.0.1.Final.jar" sourcepath="/3RDPARTY_SOURCES_PROJECT/jsp-api">
+	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/javax/servlet/jsp/api/main/jboss-jsp-api_2.3_spec-1.0.1.Final.jar" sourcepath="/home/korwi/.m2/repository/org/jboss/spec/javax/servlet/jsp/jboss-jsp-api_2.3_spec/1.0.1.Final/jboss-jsp-api_2.3_spec-1.0.1.Final-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://docs.oracle.com/javaee/7/api/javax/servlet/jsp/"/>
 		</attributes>
