LDEV-4661 Move dependency to lams.jar

--- a/lams_common/build.xml
+++ b/lams_common/build.xml
@@ -4,6 +4,8 @@
 	
 	<import file="../lams_build/build_base.xml"/>
 	
+	<target name="_compile-java" depends="_compile-java-nocommon" />
+	
 	<target name="build-db" depends="_clean-dirs"
 		description="Rebuilds LAMS database.">
 		
