LDEV-4440 All projects start using solely 3rdParty.userlibraries

--- a/lams_tool_dimdim/.classpath
+++ b/lams_tool_dimdim/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/org/jboss/log4j/logmanager/main/log4j-jboss-logmanager-1.1.2.Final.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lams_common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lams_learning"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/noStruts"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/3rdParty"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
