LDEV-4440 Switch servlets to using autowired service beans
Besides, RegisterAction was renamed to RegisterServlet. And one
remaining constant was moved from AuthoringConstants to CentralConstants
with subsequent removal of AuthoringConstants.java.

--- a/lams_central/web/WEB-INF/web.xml
+++ b/lams_central/web/WEB-INF/web.xml
@@ -201,7 +201,7 @@
 
 	<servlet>
 		<servlet-name>RegisterServlet</servlet-name>
-		<servlet-class>org.lamsfoundation.lams.webservice.RegisterAction
+		<servlet-class>org.lamsfoundation.lams.webservice.RegisterServlet
 		</servlet-class>
 	</servlet>
 
