LDEV-4440, LDEV-3275 Update XStream binaries
Version 1.4.10 is more up to date than 1.5.0 which has been released
unofficially.

--- a/lams_tool_deploy/.classpath
+++ b/lams_tool_deploy/.classpath
@@ -11,10 +11,10 @@
 	<classpathentry kind="lib" path="lib/ant/ant.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/mysql-connector-java-8.0.11.jar" sourcepath="/3rdParty_sources/mysql-connector"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/xstream-1.5.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-collections-3.2.2.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-dbutils-1.7.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/xstream-1.4.10.jar" sourcepath="/3rdParty_sources/xstream"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
