LDEV-4691 Make Hibernate a part of LAMS libraries
WildFly 14 provides Hibernate 5.3. Migrating LAMS from 5.0.10 will
require some effort. For now we provide our own version of Hibernate to
keep compatible.

--- a/lams_build/build.xml
+++ b/lams_build/build.xml
@@ -455,6 +455,16 @@
 		
 		
 		
+		<copy todir="${server.home}/modules/system/layers/base/org/hibernate/5.0.10" overwrite="true" verbose="true">
+			<fileset dir="lib/hibernate">
+				<include name="*.jar" />
+			</fileset>
+		</copy>
+		<copy tofile="${server.home}/modules/system/layers/base/org/hibernate/5.0.10/module.xml"
+			  file="lib/hibernate/hibernate.module.xml" overwrite="true" verbose="true" />
+			
+			
+			
 		<copy todir="${server.home}/modules/system/layers/base/org/apache/commons/collections4/main" overwrite="true" verbose="true">
 			<fileset dir="lib/jakarta-commons">
 				<include name="commons-collections4-*.jar" />
